alignment fixes

--- a/src/index.css
+++ b/src/index.css
@@ -103,7 +103,7 @@ button {
   background-color: var(--p500);
   border: 3px solid var(--n400);
   border-radius: 15px;
-  width: 100%;
+  width: 320px;
   height: 80px;
   text-align: center;
   font-size: 18px;
@@ -321,7 +321,6 @@ button.delete {
 /*Search bar*/
 .helpSearch{
   height: 60px;
-  max-width: 300px;
   margin: 0px;
   display: flex;
   flex-direction: horizontal;
@@ -333,7 +332,7 @@ button.delete {
   outline: solid;
   outline-width: 0px;
   outline-color: var(--n500);
-  width: 250px;
+  width: 260px;
   text-align: center;
   color: var(--n100);
   margin: 0px 10px 0px 0px;
@@ -1005,7 +1004,7 @@ button.back-nav {
   margin: 20px;
   display: flex;
   flex-direction: column;
-  max-width: 300px;
+  min-width: 320px;
   margin-top: 0px;
 }
 .left-panel > .content {
